--- a/index.htm
+++ b/index.htm
@@ -12,12 +12,54 @@
       "
     >
       <div style="background-color: white; padding: 50px">
-        <form action="certi.php" method="post">
-          Name: <input type="text" name="name"><br>
-          E-mail: <input type="text" name="email"><br>
-          <input type="file" id="myfile" name="myfile"><br>
-          <input type="submit">
-          </form>
+        <form action="certi.php" method="post" enctype="multipart/form-data">
+          <div>
+            <label>Name:</label>
+            <input type="text" name="name" id="name" />
+          </div>
+          <br />
+          <div>
+            <label>Father's Name:</label>
+            <input type="text" name="fatherName" id="fatherName" />
+          </div>
+          <br />
+          <div>
+            <label>Mother's Name:</label>
+            <input type="text" name="motherName" id="motherName" />
+          </div>
+          <br />
+          <div>
+            <label>Course Name:</label>
+            <input type="text" name="courseName" id="courseName" />
+          </div>
+          <br />
+          <div>
+            <label>Date From</label>
+            <input type="text" name="dateFrom" id="dateFrom" />
+          </div>
+          <br />
+          <div>
+            <label>Date To</label>
+            <input type="text" name="dateTo" id="dateTo" />
+          </div>
+          <br />
+          <div>
+            <label>Grade</label>
+            <input type="text" name="Grade" id="Grade" />
+          </div>
+          <br />
+          <div>
+            <label>Percentage</label>
+            <input type="text" name="Percentage" id="Percentage" />
+          </div>
+          <br />
+          <div>
+            <label>Profile Image:</label>
+            <input type="file" id="myfile" name="myfile" />
+          </div>
+          <br />
+          <input type="submit" />
+        </form>
       </div>
     </div>
   </body>
