--- a/certi.htm
+++ b/certi.htm
@@ -12,50 +12,61 @@
       "
     >
       <div style="background-color: white; padding: 50px">
+        <h3 style="text-align: center">Generate Certificate</h3>
         <form action="certi.php" method="post" enctype="multipart/form-data">
           <div>
-            <label>Name:</label>
-            <input type="text" name="name" id="name" />
+            <label>Date of issue:</label>
+            <input type="text" name="date" id="date" required />
           </div>
           <br />
           <div>
+            <label>Name:</label>
+            <input type="text" name="name" id="name"  required />
+          </div>
+          <br />
+          <div>
+            <label>Enrollment No</label>
+            <input type="text" name="enrollmentNo" id="enrollmentNo" required/>
+          </div>
+          <br/>
+          <div>
             <label>Father's Name:</label>
-            <input type="text" name="fatherName" id="fatherName" />
+            <input type="text" name="fatherName" id="fatherName" required />
           </div>
           <br />
           <div>
             <label>Mother's Name:</label>
-            <input type="text" name="motherName" id="motherName" />
+            <input type="text" name="motherName" id="motherName" required/>
           </div>
           <br />
           <div>
             <label>Course Name:</label>
-            <input type="text" name="courseName" id="courseName" />
+            <input type="text" name="courseName" id="courseName" required/>
           </div>
           <br />
           <div>
             <label>Date From</label>
-            <input type="text" name="dateFrom" id="dateFrom" />
+            <input type="text" name="dateFrom" id="dateFrom" required/>
           </div>
           <br />
           <div>
             <label>Date To</label>
-            <input type="text" name="dateTo" id="dateTo" />
+            <input type="text" name="dateTo" id="dateTo" required/>
           </div>
           <br />
           <div>
             <label>Grade</label>
-            <input type="text" name="Grade" id="Grade" />
+            <input type="text" name="Grade" id="Grade" required/>
           </div>
           <br />
           <div>
             <label>Percentage</label>
-            <input type="text" name="Percentage" id="Percentage" />
+            <input type="text" name="Percentage" id="Percentage" required/>
           </div>
           <br />
           <div>
             <label>Profile Image:</label>
-            <input type="file" id="myfile" name="myfile" />
+            <input type="file" id="myfile" name="myfile" required/>
           </div>
           <br />
           <input type="submit" />
